# granto-seguros-projetos

./: .gitmodules  Readme.md
backend/: .env  docker-compose.yaml  pyproject.toml  readme.md
backend/config/: settings.py
docsdatabase/: Readme.md
frontend/: Readme.md
processing/: requirements.txt  test.py
processing/files/: exp_word.docx  texto-extraido.txt
processing/read/: read_file_pdf.py  read_file_word.py  read_image.py  read_scanned_pdf_op1.py  read_scanned_pdf_op2.py
processing/text_processing/: prompt.txt  regex.py  regex_extract.py
