[tool.poetry]
name = "granto-backend"
version = "0.1.0"
description = ""
authors = ["Eduardo M. Rezende <eduardomachadorezende0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
python-decouple = "^3.8"
djangorestframework = "^3.15.1"
rest-framework-simplejwt = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
